syntax = "proto3";

package cortex.api.job.project.package;

import "google/protobuf/wrappers.proto";

message ProjectPackageRequest {
    string project_files_path = 1;
    string name = 2;
    string version = 3;
    string target_prefix = 4;
}

message ProjectPackageResponse {
    string package_location = 1;
    repeated CVTLModelPrimitive cv_tl_model_primitives = 2;
    repeated PipelineOperator pipeline_operators = 3;
}

message CVTLModelPrimitive {
    string name = 1;
    google.protobuf.StringValue description = 2;
    string module_name = 3;
    string class_name = 4;
    OperatorType type = 5;
    repeated OperatorParameter params = 6;
    bool is_neural = 7;
}

message PipelineOperator {
    string module_name = 1;
    string class_name = 2;
    repeated PipelineOperatorInput inputs = 3;
    repeated PipelineOperatorOutput outputs = 4;
    repeated OperatorParameter params = 5;
    google.protobuf.StringValue description = 6;
    string name = 7;
}

message PipelineDataType {
    oneof dataType {
        PrimitiveDataType primitive_data_type = 1;
        ComplexDataType complex_data_type = 2;
    }
}

enum PrimitiveDataType {
    String = 0;
    Integer = 1;
    Boolean = 2;
    Float = 3;
}

message ComplexDataType {
    string definition = 1;
    repeated ComplexDataType parents = 2;
    repeated PipelineDataType type_arguments = 3;
}

enum AssetType {
    TabularModel = 0;
    TabularPrediction = 1;
    Table = 2;
    Flow = 3;
    Album = 4;
    CvModel = 5;
    CvPrediction = 6;
    OnlineJob = 7;
    DCProject = 8;
}

message PipelineOperatorInput {
    string name = 1;
    google.protobuf.StringValue description = 2;
    PipelineDataType type = 3;
    bool covariate = 4;
    bool required = 5;
}

message PipelineOperatorOutput {
    google.protobuf.StringValue description = 1;
    PipelineDataType type = 2;
}

enum OperatorType {
    UTLP = 0;
    Classifier = 1;
    Detector = 2;
}

message OperatorParameter {
    string name = 1;
    google.protobuf.StringValue description = 2;
    bool multiple = 3;
    oneof typeInfo {
        StringParameter string_info = 4;
        IntParameter int_info = 5;
        FloatParameter float_info = 6;
        BooleanParameter boolean_info = 7;
        AssetParameter asset_info = 8;
    }
    map<string, ParameterCondition> conditions = 9;
}

message StringParameter {
    repeated string values = 1;
    repeated string default = 2;
}

message IntParameter {
    repeated int32 values = 1;
    repeated int32 default = 2;
    google.protobuf.Int32Value min = 3;
    google.protobuf.Int32Value max = 4;
    google.protobuf.Int32Value step = 5;
}

message FloatParameter {
    repeated float values = 1;
    repeated float default = 2;
    google.protobuf.FloatValue min = 3;
    google.protobuf.FloatValue max = 4;
    google.protobuf.FloatValue step = 5;
}

message BooleanParameter {
    repeated bool default = 1;
}

message AssetParameter {
    AssetType asset_type = 1;
}

message ParameterCondition {
    oneof condition {
        StringParameterCondition string_condition = 1;
        IntParameterCondition int_condition = 2;
        FloatParameterCondition float_condition = 3;
        BooleanParameterCondition boolean_condition = 4;
    }
}

message StringParameterCondition {
    repeated string values = 1;
}

message IntParameterCondition {
    repeated int32 values = 1;
    google.protobuf.Int32Value min = 2;
    google.protobuf.Int32Value max = 3;
}

message FloatParameterCondition {
    repeated float values = 1;
    google.protobuf.FloatValue min = 2;
    google.protobuf.FloatValue max = 3;
}

message BooleanParameterCondition {
    bool value = 1;
}
